--- a/Game/index.html
+++ b/Game/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cold War Keyboards</title>
+    <title>Soviet Computer Lab</title>
     <meta property="og:image" content="https://www.bugsby.net/QTB/thumbnail.png" />
     <meta property="og:image:width" content="1200"/>
     <meta property="og:image:height" content="1200"/>
@@ -196,6 +196,7 @@
     <script type="text/javascript" src="Source/Libraries/tween.umd.min.js"></script>
 
     <script type="text/javascript" src="Source/utilities.js"></script>
+    <script type="text/javascript" src="Source/nested_options_list.js"></script>
     <script type="text/javascript" src="Source/game.js"></script>
     <script type="text/javascript" src="Source/user_interface.js"></script>
     <script type="text/javascript" src="Source/control.js"></script>
