--- a/Game/index.html
+++ b/Game/index.html
@@ -212,6 +212,7 @@
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
     <script type="text/javascript" src="Source/screen_1p_lobby.js"></script>
     <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
+    <script type="text/javascript" src="Source/screen_multi_join_game.js"></script>
     <script type="text/javascript" src="Source/screen_cutscene.js"></script>
     <script type="text/javascript" src="Source/screen_high_score.js"></script>
     <script type="text/javascript" src="Source/screen_game_over.js"></script>
