--- a/Game/index.html
+++ b/Game/index.html
@@ -211,7 +211,9 @@
     <script type="text/javascript" src="Source/screen_1p_base_capture.js"></script>
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
     <script type="text/javascript" src="Source/screen_1p_lobby.js"></script>
+    <script type="text/javascript" src="Source/screen_math_game.js"></script>
     <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
+    <script type="text/javascript" src="Source/screen_multi_set_name.js"></script>
     <script type="text/javascript" src="Source/screen_multi_join_game.js"></script>
     <script type="text/javascript" src="Source/screen_cutscene.js"></script>
     <script type="text/javascript" src="Source/screen_high_score.js"></script>
