Quick implementation of the math game. Pretty cool.

--- a/Game/index.html
+++ b/Game/index.html
@@ -124,6 +124,14 @@
       <source src="Sound/hurt.wav" type="audio/wav">
     </audio>
 
+    <audio preload="auto" id="success" >
+      <source src="Sound/success.wav" type="audio/wav">
+    </audio>
+
+    <audio preload="auto" id="toot" >
+      <source src="Sound/toot.wav" type="audio/wav">
+    </audio>
+
     <audio preload="auto" id="big_rocket" >
       <source src="Sound/big_rocket.mp3" type="audio/mpeg">
     </audio>
@@ -203,6 +211,7 @@
     <script type="text/javascript" src="Source/network.js"></script>
     <script type="text/javascript" src="Source/launchpad.js"></script>
     <script type="text/javascript" src="Source/runner.js"></script>
+    <script type="text/javascript" src="Source/character.js"></script>
     <script type="text/javascript" src="Source/prompt.js"></script>
     <script type="text/javascript" src="Source/tutorial.js"></script>
     <script type="text/javascript" src="Source/screen_intro.js"></script>
