Finish basic draft of math game by adding Stalin's anti rules

--- a/Game/index.html
+++ b/Game/index.html
@@ -156,6 +156,10 @@
       <source src="Sound/countdown.mp3" type="audio/mpeg">
     </audio>
 
+    <audio preload="auto" id="ding_ding_ding" >
+      <source src="Sound/ding_ding_ding.mp3" type="audio/mpeg">
+    </audio>
+
     <audio preload="auto" id="intro" >
       <source src="Sound/intro.mp3" type="audio/mpeg">
     </audio>
