Add walkers and make them respect physical boundaries

--- a/Game/index.html
+++ b/Game/index.html
@@ -229,6 +229,7 @@
     <script type="text/javascript" src="Source/screen_1p_base_capture.js"></script>
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
     <script type="text/javascript" src="Source/screen_1p_lobby.js"></script>
+    <script type="text/javascript" src="Source/cpe_level_config.js"></script>
     <script type="text/javascript" src="Source/screen_1p_cpe.js"></script>
     <script type="text/javascript" src="Source/screen_cpe_character_tester.js"></script>
     <script type="text/javascript" src="Source/screen_math_game.js"></script>
