--- a/Game/index.html
+++ b/Game/index.html
@@ -220,7 +220,6 @@
     <script type="text/javascript" src="Source/launchpad.js"></script>
     <script type="text/javascript" src="Source/runner.js"></script>
     <script type="text/javascript" src="Source/character.js"></script>
-    <script type="text/javascript" src="Source/cpe_character.js"></script>
     <script type="text/javascript" src="Source/prompt.js"></script>
     <script type="text/javascript" src="Source/tutorial.js"></script>
     <script type="text/javascript" src="Source/screen_intro.js"></script>
@@ -230,6 +229,8 @@
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
     <script type="text/javascript" src="Source/screen_1p_lobby.js"></script>
     <script type="text/javascript" src="Source/cpe_level_config.js"></script>
+    <script type="text/javascript" src="Source/cpe_door.js"></script>
+    <script type="text/javascript" src="Source/cpe_character.js"></script>
     <script type="text/javascript" src="Source/screen_1p_cpe.js"></script>
     <script type="text/javascript" src="Source/screen_cpe_character_tester.js"></script>
     <script type="text/javascript" src="Source/screen_math_game.js"></script>
