Finish time clock, add reset, play, pause, quit buttons, game responds appropriately to all of these. Also, switch to Howler.js for sound across the entire project.

--- a/Game/index.html
+++ b/Game/index.html
@@ -36,166 +36,6 @@
     </style>
   </head>
   <body bgcolor = #D9D9D9 onload="initialize();">
-    <audio preload="auto" id="negative" >
-      <source src="Sound/negative.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="rocket" >
-      <source src="Sound/rocket.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="explosion_1" >
-      <source src="Sound/explosion_1.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="explosion_2" >
-      <source src="Sound/explosion_2.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="explosion_3" >
-      <source src="Sound/explosion_3.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="game_over" >
-      <source src="Sound/game_over.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="victory" >
-      <source src="Sound/victory.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="keyboard_click_1" >
-      <source src="Sound/keyboard_click_1.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="keyboard_click_2" >
-      <source src="Sound/keyboard_click_2.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="keyboard_click_3" >
-      <source src="Sound/keyboard_click_3.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="keyboard_click_4" >
-      <source src="Sound/keyboard_click_4.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="keyboard_click_5" >
-      <source src="Sound/keyboard_click_5.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="swipe" >
-      <source src="Sound/swipe.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="build" >
-      <source src="Sound/build.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="multibuild" >
-      <source src="Sound/multibuild.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="button_accept" >
-      <source src="Sound/button_accept.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="switch_option" >
-      <source src="Sound/switch_option.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="button_chirp" >
-      <source src="Sound/button_chirp.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="door" >
-      <source src="Sound/door.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="accept" >
-      <source src="Sound/accept.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="grunt" >
-      <source src="Sound/grunt.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="hurt" >
-      <source src="Sound/hurt.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="success" >
-      <source src="Sound/success.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="toot" >
-      <source src="Sound/toot.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="big_rocket" >
-      <source src="Sound/big_rocket.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="slap_1" >
-      <source src="Sound/slap_1.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="slap_2" >
-      <source src="Sound/slap_2.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="slap_3" >
-      <source src="Sound/slap_3.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="slap_4" >
-      <source src="Sound/slap_4.wav" type="audio/wav">
-    </audio>
-
-    <audio preload="auto" id="countdown" >
-      <source src="Sound/countdown.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="ding_ding_ding" >
-      <source src="Sound/ding_ding_ding.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="intro" >
-      <source src="Sound/intro.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="action_song_1" >
-      <source src="Sound/David_Fesliyan_Retro_Platforming.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="action_song_2" >
-      <source src="Sound/David_Renda_Retro_Funk.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="action_song_3" >
-      <source src="Sound/Abstraction_Ludum_Dare_28_Track_Eight.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="title_song" >
-      <source src="Sound/Nene_Boss_Battle_6_cc0.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="cutscene_song" >
-      <source src="Sound/Abstraction_Ludum_Dare_28_Track_Three.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="putzen_song" >
-      <source src="Sound/Suez_Crisis.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="final_song" >
-      <source src="Sound/Nene_Count_Down_cc0.mp3" type="audio/mpeg">
-    </audio>
-
-    <audio preload="auto" id="marche_slav" >
-      <source src="Sound/marche_slav.mp3" type="audio/mpeg">
-    </audio>
-
     <div id="mainDiv">
     </div>
     <script type="text/javascript" charset="utf-8">
@@ -210,9 +50,11 @@
     <script type="text/javascript" src="Source/Libraries/pixi.min.js"></script>
     <script type="text/javascript" src="Source/Libraries/pixi-spine.js"></script>
     <script type="text/javascript" src="Source/Libraries/tween.umd.min.js"></script>
+    <script type="text/javascript" src="Source/Libraries/howler.min.js"></script>
 
     <script type="text/javascript" src="Source/utilities.js"></script>
     <script type="text/javascript" src="Source/nested_options_list.js"></script>
+    <script type="text/javascript" src="Source/sound.js"></script>
     <script type="text/javascript" src="Source/game.js"></script>
     <script type="text/javascript" src="Source/user_interface.js"></script>
     <script type="text/javascript" src="Source/control.js"></script>
