Begin refactor by putting title and lobby modes into classes, as an experiment with using a class per game screen.

--- a/Game/index.html
+++ b/Game/index.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="Source/utilities.js"></script>
     <script type="text/javascript" src="Source/nested_options_list.js"></script>
     <script type="text/javascript" src="Source/sound.js"></script>
+    <script type="text/javascript" src="Source/time.js"></script>
     <script type="text/javascript" src="Source/game.js"></script>
     <script type="text/javascript" src="Source/user_interface.js"></script>
     <script type="text/javascript" src="Source/control.js"></script>
@@ -69,7 +70,7 @@
     <script type="text/javascript" src="Source/screen_1p_word_rockets.js"></script>
     <script type="text/javascript" src="Source/screen_1p_base_capture.js"></script>
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
-    <script type="text/javascript" src="Source/screen_1p_lobby.js"></script>
+    <script type="text/javascript" src="Source/screen_lobby.js"></script>
     <script type="text/javascript" src="Source/cpe_level_config.js"></script>
     <script type="text/javascript" src="Source/cpe_door.js"></script>
     <script type="text/javascript" src="Source/cpe_character.js"></script>
