Refactor Centrally Planned Economy into a class.

--- a/Game/index.html
+++ b/Game/index.html
@@ -53,29 +53,37 @@
     <script type="text/javascript" src="Source/Libraries/howler.min.js"></script>
 
     <script type="text/javascript" src="Source/utilities.js"></script>
-    <script type="text/javascript" src="Source/nested_options_list.js"></script>
     <script type="text/javascript" src="Source/sound.js"></script>
     <script type="text/javascript" src="Source/time.js"></script>
+
     <script type="text/javascript" src="Source/game.js"></script>
-    <script type="text/javascript" src="Source/user_interface.js"></script>
+    <script type="text/javascript" src="Source/game_screen_management.js"></script>
+    <script type="text/javascript" src="Source/game_utilities.js"></script>
+
+    <script type="text/javascript" src="Source/nested_options_list.js"></script>
     <script type="text/javascript" src="Source/control.js"></script>
-    <script type="text/javascript" src="Source/network.js"></script>
     <script type="text/javascript" src="Source/launchpad.js"></script>
     <script type="text/javascript" src="Source/runner.js"></script>
     <script type="text/javascript" src="Source/character.js"></script>
     <script type="text/javascript" src="Source/prompt.js"></script>
+
     <script type="text/javascript" src="Source/tutorial.js"></script>
+
+    <script type="text/javascript" src="Source/network.js"></script>
+
     <script type="text/javascript" src="Source/screen_intro.js"></script>
     <script type="text/javascript" src="Source/screen_title.js"></script>
+    <script type="text/javascript" src="Source/screen_lobby.js"></script>
+    <script type="text/javascript" src="Source/screen_centrally_planned_economy.js"></script>
+
     <script type="text/javascript" src="Source/screen_1p_word_rockets.js"></script>
     <script type="text/javascript" src="Source/screen_1p_base_capture.js"></script>
     <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
-    <script type="text/javascript" src="Source/screen_lobby.js"></script>
+
     <script type="text/javascript" src="Source/cpe_level_config.js"></script>
     <script type="text/javascript" src="Source/cpe_door.js"></script>
     <script type="text/javascript" src="Source/cpe_character.js"></script>
-    <script type="text/javascript" src="Source/screen_1p_cpe.js"></script>
-    <script type="text/javascript" src="Source/screen_cpe_character_tester.js"></script>
+
     <script type="text/javascript" src="Source/screen_math_game.js"></script>
     <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
     <script type="text/javascript" src="Source/screen_multi_set_name.js"></script>
