--- a/Game/index.html
+++ b/Game/index.html
@@ -66,31 +66,27 @@
     <script type="text/javascript" src="Source/runner.js"></script>
     <script type="text/javascript" src="Source/character.js"></script>
     <script type="text/javascript" src="Source/prompt.js"></script>
-
     <script type="text/javascript" src="Source/tutorial.js"></script>
-
     <script type="text/javascript" src="Source/network.js"></script>
-
-    <script type="text/javascript" src="Source/screen_intro.js"></script>
-    <script type="text/javascript" src="Source/screen_title.js"></script>
-    <script type="text/javascript" src="Source/screen_lobby.js"></script>
-    <script type="text/javascript" src="Source/screen_centrally_planned_economy.js"></script>
-
-    <script type="text/javascript" src="Source/screen_1p_word_rockets.js"></script>
-    <script type="text/javascript" src="Source/screen_1p_base_capture.js"></script>
-    <script type="text/javascript" src="Source/screen_1p_launch_code.js"></script>
-
     <script type="text/javascript" src="Source/cpe_level_config.js"></script>
     <script type="text/javascript" src="Source/cpe_door.js"></script>
     <script type="text/javascript" src="Source/cpe_character.js"></script>
 
-    <script type="text/javascript" src="Source/screen_math_game.js"></script>
+    <script type="text/javascript" src="Source/Screens/intro.js"></script>
+    <script type="text/javascript" src="Source/Screens/title.js"></script>
+    <script type="text/javascript" src="Source/Screens/lobby.js"></script>
+    <script type="text/javascript" src="Source/Screens/high_score.js"></script>
+
+    <script type="text/javascript" src="Source/Subgames/word_rockets.js"></script>
+    <script type="text/javascript" src="Source/Subgames/word_base.js"></script>
+    <script type="text/javascript" src="Source/Subgames/party_math.js"></script>
+    <script type="text/javascript" src="Source/Subgames/centrally_planned_economy.js"></script>
+    <script type="text/javascript" src="Source/Subgames/first_strike.js"></script>
+    
     <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
     <script type="text/javascript" src="Source/screen_multi_set_name.js"></script>
     <script type="text/javascript" src="Source/screen_multi_join_game.js"></script>
     <script type="text/javascript" src="Source/screen_cutscene.js"></script>
-    <script type="text/javascript" src="Source/screen_high_score.js"></script>
-    <script type="text/javascript" src="Source/screen_game_over.js"></script>
     <script type="text/javascript" src="Source/screen_credits.js"></script>
   </body>
 </html>
