--- a/Game/index.html
+++ b/Game/index.html
@@ -52,23 +52,19 @@
     <script type="text/javascript" src="Source/Libraries/tween.umd.min.js"></script>
     <script type="text/javascript" src="Source/Libraries/howler.min.js"></script>
 
-    <script type="text/javascript" src="Source/utilities.js"></script>
-    <script type="text/javascript" src="Source/sound.js"></script>
-    <script type="text/javascript" src="Source/time.js"></script>
+    <script type="text/javascript" src="Source/Engine/2d_game_utilities.js"></script>
+    <script type="text/javascript" src="Source/Engine/general_utilities.js"></script>
+    <script type="text/javascript" src="Source/Engine/nested_options_list.js"></script>
+    <script type="text/javascript" src="Source/Engine/network.js"></script>
+    <script type="text/javascript" src="Source/Engine/sound.js"></script>
+    <script type="text/javascript" src="Source/Engine/time.js"></script>
 
-    <script type="text/javascript" src="Source/game.js"></script>
-    <script type="text/javascript" src="Source/game_screen_management.js"></script>
-    <script type="text/javascript" src="Source/game_utilities.js"></script>
-
-    <script type="text/javascript" src="Source/nested_options_list.js"></script>
-    <script type="text/javascript" src="Source/launchpad.js"></script>
-    <script type="text/javascript" src="Source/tutorial.js"></script>
-    <script type="text/javascript" src="Source/network.js"></script>
-
-    <script type="text/javascript" src="Source/Screens/intro.js"></script>
-    <script type="text/javascript" src="Source/Screens/title.js"></script>
-    <script type="text/javascript" src="Source/Screens/lobby.js"></script>
-    <script type="text/javascript" src="Source/Screens/high_score.js"></script>
+    <script type="text/javascript" src="Source/Game/game.js"></script>
+    <script type="text/javascript" src="Source/Game/game_screen_management.js"></script>
+    <script type="text/javascript" src="Source/Game/high_score.js"></script>
+    <script type="text/javascript" src="Source/Game/intro.js"></script>
+    <script type="text/javascript" src="Source/Game/lobby.js"></script>
+    <script type="text/javascript" src="Source/Game/title.js"></script>
 
     <script type="text/javascript" src="Source/Subgames/kuzkas_mother.js"></script>
     <script type="text/javascript" src="Source/Subgames/word_base.js"></script>
@@ -76,17 +72,17 @@
     <script type="text/javascript" src="Source/Subgames/centrally_planned_economy.js"></script>
     <script type="text/javascript" src="Source/Subgames/first_strike.js"></script>
 
-    <script type="text/javascript" src="Source/runner.js"></script>
-    <script type="text/javascript" src="Source/character.js"></script>
-    <script type="text/javascript" src="Source/prompt.js"></script>
-    <script type="text/javascript" src="Source/cpe_level_config.js"></script>
-    <script type="text/javascript" src="Source/cpe_door.js"></script>
-    <script type="text/javascript" src="Source/cpe_character.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/cpe_character.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/cpe_door.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/cpe_level_config.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/first_strike_prompt.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/first_strike_runner.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/kuzka_launchpad.js"></script>
+    <script type="text/javascript" src="Source/Subgame_Elements/party_math_character.js"></script>
     
     <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
     <script type="text/javascript" src="Source/screen_multi_set_name.js"></script>
     <script type="text/javascript" src="Source/screen_multi_join_game.js"></script>
-    <script type="text/javascript" src="Source/screen_cutscene.js"></script>
     <script type="text/javascript" src="Source/screen_credits.js"></script>
   </body>
 </html>
