--- a/Game/index.html
+++ b/Game/index.html
@@ -61,13 +61,18 @@
 
     <script type="text/javascript" src="Source/Game/game.js"></script>
     <script type="text/javascript" src="Source/Game/game_screen_management.js"></script>
+
+    <script type="text/javascript" src="Source/Game/credits.js"></script>
     <script type="text/javascript" src="Source/Game/high_score.js"></script>
     <script type="text/javascript" src="Source/Game/intro.js"></script>
     <script type="text/javascript" src="Source/Game/lobby.js"></script>
+    <script type="text/javascript" src="Source/Game/multi_join_game.js"></script>
+    <script type="text/javascript" src="Source/Game/multi_lobby.js"></script>
+    <script type="text/javascript" src="Source/Game/multi_set_name.js"></script>
     <script type="text/javascript" src="Source/Game/title.js"></script>
 
     <script type="text/javascript" src="Source/Subgames/kuzkas_mother.js"></script>
-    <script type="text/javascript" src="Source/Subgames/word_base.js"></script>
+    <script type="text/javascript" src="Source/Subgames/magnitogorsk.js"></script>
     <script type="text/javascript" src="Source/Subgames/party_math.js"></script>
     <script type="text/javascript" src="Source/Subgames/centrally_planned_economy.js"></script>
     <script type="text/javascript" src="Source/Subgames/first_strike.js"></script>
@@ -79,10 +84,6 @@
     <script type="text/javascript" src="Source/Subgame_Elements/first_strike_runner.js"></script>
     <script type="text/javascript" src="Source/Subgame_Elements/kuzka_launchpad.js"></script>
     <script type="text/javascript" src="Source/Subgame_Elements/party_math_character.js"></script>
-    
-    <script type="text/javascript" src="Source/screen_multi_lobby.js"></script>
-    <script type="text/javascript" src="Source/screen_multi_set_name.js"></script>
-    <script type="text/javascript" src="Source/screen_multi_join_game.js"></script>
-    <script type="text/javascript" src="Source/screen_credits.js"></script>
+
   </body>
 </html>
